fix code response text tsk
